<resources>
    <string name="app_name">DotDash</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_select">Select</string>
    <string name="menu_previous">Previous</string>
    <string name="menu_stop">Stop</string>

    <!-- Strings related to IO -->

    <string name="title_activity_io">Free mode</string>
    <string name="input_outputs">Input &amp; outputs</string>
    <string name="outputs">Outputs</string>
    <string name="output_selection_dialog_title">Select your outputs</string>
    <string name="output_selection_sound">Sound</string>
    <string name="output_selection_screen">Screen</string>
    <string name="output_selection_vibration">Vibration</string>
    <string name="output_selection_diagram">Diagram</string>
    <string name="input">Input</string>
    <string name="input_selection_dialog_title">Select your input</string>
    <string name="input_selection_fab">Small button</string>
    <string name="input_selection_large_button">Large button</string>
    <string name="input_selection_text">Text</string>
    <string name="morse_input_text_hint">Text to send</string>

    <!-- Strings related to the code sheet -->

    <string name="code_sheet">Code sheet</string>
    <string name="code_sheet_letters">A - Z</string>
    <string name="code_sheet_numbers">0 - 9</string>
    <string name="code_sheet_punctuation">...</string>

    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>
    <string name="pref_about_title">About</string>
    <string name="pref_dev_title">Developer</string>
    <string name="pref_dev_summary">Check out my website</string>
    <string name="pref_dev_website" translatable="false">http://aohayo.net</string>
    <string name="pref_source_code_title">Source code</string>
    <string name="pref_source_code_summary">Fork me on Github</string>
    <string name="pref_code_repo" translatable="false">https://github.com/Aohayou/DotDash</string>
    <string name="pref_morse_title">Morse</string>
    <string name="pref_title_wpm">Speed (Words per minute)</string>
    <string-array name="pref_wpm_titles">
        <item>30 (Very fast)</item>
        <item>25</item>
        <item>20</item>
        <item>18</item>
        <item>15</item>
        <item>13</item>
        <item>10</item>
        <item>5 (Very slow)</item>
    </string-array>
    <string-array name="pref_wpm_values" translatable="false">
        <item>30</item>
        <item>25</item>
        <item>20</item>
        <item>18</item>
        <item>15</item>
        <item>13</item>
        <item>10</item>
        <item>5</item>
    </string-array>
    <string name="pref_wpm_default" translatable="false">18</string>

    <string name="pref_title_wpm_reference_word">Speed reference word</string>
    <string-array name="pref_wpm_ref_word_titles" translatable="false">
        <item>PARIS</item>
        <item>CODEX</item>
    </string-array>
    <string-array name="pref_wpm_ref_word_values" translatable="false">
        <item>50</item>
        <item>60</item>
    </string-array>
    <string name="pref_wpm_ref_word_default" translatable="false">50</string>

    <string name="pref_title_longer_gaps">Longer gaps</string>
    <string name="pref_description_longer_gaps">Use a longer gap between the characters</string>

    <string name="pref_title_wpm_gaps">Gaps speed (Words per minute)</string>
    <string-array name="pref_wpm_gaps_titles_values" translatable="false">
        <item>15</item>
        <item>10</item>
        <item>5</item>
    </string-array>
    <string name="pref_wpm_gaps_default" translatable="false">10</string>

    <string name="pref_io_title">Input &amp; outputs</string>

    <string name="pref_title_diagram_speed">Diagram output speed</string>
    <string-array name="pref_diagram_speed_titles">
        <item>Ultra fast</item>
        <item>Fast</item>
        <item>Normal</item>
        <item>Slow</item>
        <item>Ultra slow</item>
    </string-array>
    <string-array name="pref_diagram_speed_values" translatable="false">
        <item>150</item>
        <item>100</item>
        <item>75</item>
        <item>50</item>
        <item>20</item>
    </string-array>
    <string name="pref_diagram_speed_default" translatable="false">100</string>

    <string name="pref_title_tone_frequency">Tone frequency (Hz)</string>
    <string-array name="pref_tone_frequency_titles_values" translatable="false">
        <item>840</item>
        <item>700</item>
        <item>600</item>
        <item>525</item>
        <item>400</item>
    </string-array>
    <string name="pref_tone_frequency_default" translatable="false">600</string>

</resources>
