<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_morse_title">
        <ListPreference
            android:defaultValue="@string/pref_wpm_default"
            android:entries="@array/pref_wpm_titles"
            android:entryValues="@array/pref_wpm_values"
            android:key="wpm"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_wpm" />

        <ListPreference
            android:defaultValue="@string/pref_wpm_ref_word_default"
            android:entries="@array/pref_wpm_ref_word_titles"
            android:entryValues="@array/pref_wpm_ref_word_values"
            android:key="wpm_ref_word"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_wpm_reference_word" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="longer_gaps"
            android:summary="@string/pref_description_longer_gaps"
            android:title="@string/pref_title_longer_gaps" />

        <ListPreference
            android:defaultValue="@string/pref_wpm_gaps_default"
            android:entries="@array/pref_wpm_gaps_titles_values"
            android:entryValues="@array/pref_wpm_gaps_titles_values"
            android:key="wpm_gaps"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:dependency="longer_gaps"
            android:title="@string/pref_title_wpm_gaps" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_io_title">

        <ListPreference
            android:defaultValue="@string/pref_diagram_speed_default"
            android:entries="@array/pref_diagram_speed_titles"
            android:entryValues="@array/pref_diagram_speed_values"
            android:key="diagram_speed"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_diagram_speed" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_about_title">
        <Preference
            android:title="@string/pref_dev_title"
            android:summary="@string/pref_dev_summary"
            android:icon="@mipmap/ic_ao_36dp" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_dev_website" />
        </Preference>
        <Preference
            android:title="@string/pref_source_code_title"
            android:summary="@string/pref_source_code_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/pref_code_repo" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
