<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@mipmap/ic_import_export_white_48dp"
        android:title="@string/input_outputs"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/input"
                android:title="@string/input"/>
            <item android:id="@+id/outputs"
                android:title="@string/outputs"/>
        </menu>
    </item>
    <item android:id="@+id/code_sheet"
        android:icon="@mipmap/ic_morse_white_48dp"
        android:title="@string/code_sheet"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/settings"
        android:title="@string/title_activity_settings"
        android:icon="@mipmap/ic_settings_white_24dp"
        app:showAsAction="never" />
</menu>