<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:id="@+id/outputSelection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/output_selection_dialog_title"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_margin="15dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sound_output_layout"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:id="@+id/frameLayout">

                    <ImageView
                        android:layout_width="@dimen/io_selection_icon_size"
                        android:layout_height="@dimen/io_selection_icon_size"
                        android:id="@+id/imageView"
                        android:src="@mipmap/ic_volume_up_white_48dp" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/output_selection_sound"
                    android:id="@+id/textView2"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/frameLayout"
                    android:layout_toEndOf="@+id/frameLayout"
                    android:layout_marginLeft="15dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sound_output_checkbox"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/itemSeparator"
                android:id="@+id/screen_output_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/screen_output_layout"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:id="@+id/frameLayout2" >

                    <ImageView
                        android:layout_width="@dimen/io_selection_icon_size"
                        android:layout_height="@dimen/io_selection_icon_size"
                        android:id="@+id/imageView4"
                        android:src="@mipmap/ic_smartphone_white_48dp" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/output_selection_screen"
                    android:id="@+id/textView3"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/frameLayout2"
                    android:layout_toEndOf="@+id/frameLayout2"
                    android:layout_marginLeft="15dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/screen_output_checkbox"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/itemSeparator"
                android:id="@+id/vibrator_output_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vibrator_output_layout"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:id="@+id/frameLayout3" >

                    <ImageView
                        android:layout_width="@dimen/io_selection_icon_size"
                        android:layout_height="@dimen/io_selection_icon_size"
                        android:id="@+id/imageView3"
                        android:src="@mipmap/ic_vibration_white_48dp"
                        android:background="@color/colorAccent" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/output_selection_vibrator"
                    android:id="@+id/textView4"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/frameLayout3"
                    android:layout_toEndOf="@+id/frameLayout3"
                    android:layout_marginLeft="15dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vibrator_output_checkbox"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/itemSeparator"
                android:id="@+id/diagram_output_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/diagram_output_layout"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:padding="10dp"
                    android:id="@+id/frameLayout4" >

                    <ImageView
                        android:layout_width="@dimen/io_selection_icon_size"
                        android:layout_height="@dimen/io_selection_icon_size"
                        android:id="@+id/imageView5"
                        android:src="@mipmap/ic_morse_white_48dp"
                        android:background="@color/colorAccent" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/output_selection_diagram"
                    android:id="@+id/textView5"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/frameLayout4"
                    android:layout_toEndOf="@+id/frameLayout4"
                    android:layout_marginLeft="15dp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diagram_output_checkbox"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>